2006-11-30  Edward Hervey  <edward@fluendo.com>

	* pitivi/bin.py:
	Use the ExportSettings audio and video caps.
	Add an audioresample for the audio encoder.
	Put videorate AFTER videoscale and BEFORE the encoder.
	* pitivi/check.py:
	* pitivi/configure.py.in:
	* pitivi/elements/__init__.py:
	Add documentation
	* pitivi/elements/smartscale.py:
	Put videoscale before videobox.
	Use bilinear scaling for videoscale.
	* pitivi/objectfactory.py:
	(VideoStream): Set default framerate and pixel-aspect-ratio to
	gst.Fraction(1,1)
	* pitivi/settings.py:
	(ExportSettings.__str__):add the PAR
	* pitivi/timeline.py:
	(TimelineComposition._getAutoSettings): In fact, always return the
	ExportSettings of the first source.

2006-11-30  Edward Hervey  <edward@fluendo.com>

	* pitivi/bin.py:
	small debug addition
	* pitivi/timeline.py:
	Implement TimelineComposition.__nonzero__ so that bool(timeline) returns
	True, even though it has a length of 0 (because it has no sources).

2006-11-30  Edward Hervey  <edward@fluendo.com>

	* pitivi/Makefile.am:
	Add pitivigstutils.py. whoops :(
	* pitivi/bin.py:
	Use project.getSettings() instead of project.settings
	* pitivi/objectfactory.py:
	(FileSourceFactory.getExportSettings): new method to get the settings
	from an file.
	(VideoStream.getMarkup): use gst.Fraction
	* pitivi/project.py:
	Add 'settings-changed' signal.
	Added methods for handling project's Settings, including automatic
	settings.
	cleanup.
	* pitivi/settings.py:
	Use gst.Fraction for video framerate.
	Added methods for getting a markup-ed human-readable description of the
	audio and video settings.
	* pitivi/timeline.py:
	Added methods for computing the auto ExportSettings of a timeline.
	* pitivi/utils.py:
	Remove deprecated function
	* pitivi/elements/smartscale.py:
	better handling of caps.
	* pitivi/ui/encodingdialog.glade:
	Modified a bit, added a summary of the settings used so you don't need
	to go into the Settings dialog to know what settings are going to be